--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "mongoose": "^8.20.0",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^6.5.2",
